parser.output
Terminals unused in grammar

    BT_CERO
    BT_DOSCIENTOSCINCUENTAYCINCO


Grammar

    0 $accept: descAlgoritmo $end

    1 descAlgoritmo: BT_ALGORITMO BT_IDENTIFICADOR BT_COMPOSICIONSECUENCIAL cabeceraAlgoritmo bloqueAlgoritmo BT_FALGORITMO

    2 cabeceraAlgoritmo: defGlobales defAccionesFunciones defVariablesInteraccion BT_COMENTARIO

    3 bloqueAlgoritmo: bloque BT_COMENTARIO

    4 defGlobales: definicionTipo defGlobales
    5            | definicionConst defGlobales
    6            | %empty

    7 defAccionesFunciones: defAccion defAccionesFunciones
    8                     | defFuncion defAccionesFunciones
    9                     | %empty

   10 bloque: declaraciones instrucciones

   11 declaraciones: definicionTipo declaraciones
   12              | definicionConst declaraciones
   13              | definicionVar declaraciones
   14              | %empty

   15 definicionTipo: BT_TIPO listaDefsTipo BT_FTIPO

   16 definicionConst: BT_CONST listaDefsConstantes BT_FCONST

   17 definicionVar: BT_VAR listaDefsVariables BT_FVAR

   18 listaDefsTipo: BT_IDENTIFICADOR BT_CREACIONTIPO defTipo BT_COMPOSICIONSECUENCIAL listaDefsTipo
   19              | %empty

   20 defTipo: BT_TUPLA listaCampos BT_FTUPLA
   21        | BT_TABLA BT_INICIOARRAY expresionT BT_SUBRANGO expresionT BT_FINARRAY BT_DE defTipo
   22        | BT_IDENTIFICADOR
   23        | expresionT BT_SUBRANGO expresionT
   24        | BT_REF defTipo
   25        | BT_TIPOBASE

   26 expresionT: BT_LITERALENTERO
   27           | BT_LITERALCARACTER

   28 listaCampos: BT_IDENTIFICADOR BT_ASIGNACION defTipo BT_COMPOSICIONSECUENCIAL listaCampos
   29            | %empty

   30 listaDefsConstantes: BT_IDENTIFICADOR BT_ASIGNACION BT_LITERAL BT_COMPOSICIONSECUENCIAL listaDefsConstantes
   31                    | %empty

   32 listaDefsVariables: listaId BT_DEFINICIONTIPOVARIABLE defTipo BT_COMPOSICIONSECUENCIAL listaDefsVariables
   33                   | %empty

   34 listaId: BT_IDENTIFICADOR BT_SEPARADOR listaId
   35        | BT_IDENTIFICADOR

   36 defVariablesInteraccion: defEntrada
   37                        | defEntrada defSalida
   38                        | defSalida

   39 defEntrada: BT_ENT listaDefsVariables

   40 defSalida: BT_SAL listaDefsVariables

   41 expresion: llamadaFuncion
   42          | operando
   43          | expresion BT_SUMA expresion
   44          | expresion BT_RESTA expresion
   45          | expresion BT_MULTIPLICACION expresion
   46          | expresion BT_DIVREAL expresion
   47          | expresion BT_DIV expresion
   48          | expresion BT_MOD expresion
   49          | BT_INICIOPARENTESIS expresion BT_FINPARENTESIS
   50          | BT_RESTA expresion
   51          | BT_LITERALNUMERICO
   52          | BT_SUMA expresion
   53          | expresion BT_OPREL expresion
   54          | expresion BT_Y expresion
   55          | expresion BT_O expresion
   56          | BT_NO expresion
   57          | BT_VERDADERO
   58          | BT_FALSO
   59          | expresion BT_MAYOR expresion
   60          | expresion BT_MENOR expresion
   61          | expresion BT_IGUAL expresion
   62          | expresion BT_DISTINTO expresion
   63          | expresion BT_MAYORIGUAL expresion
   64          | expresion BT_MENORIGUAL expresion

   65 operando: BT_IDENTIFICADOR
   66         | operando BT_PUNTO operando
   67         | operando BT_INICIOARRAY expresion BT_FINARRAY
   68         | operando BT_REF

   69 instrucciones: instruccion BT_COMPOSICIONSECUENCIAL instrucciones
   70              | instruccion

   71 instruccion: BT_CONTINUAR
   72            | asignacion
   73            | alternativa
   74            | iteracion
   75            | llamadaAccion

   76 asignacion: operando BT_ASIGNACION expresion

   77 alternativa: BT_SI expresion BT_ENTONCES instrucciones listaOpciones BT_FSI

   78 listaOpciones: BT_SINOSI expresion BT_ENTONCES instrucciones listaOpciones
   79              | %empty

   80 iteracion: itCotaFija
   81          | itCotaVariable

   82 itCotaVariable: BT_MIENTRAS expresion BT_HACER instrucciones BT_FMIENTRAS

   83 itCotaFija: BT_PARA BT_IDENTIFICADOR BT_ASIGNACION expresion BT_HASTA expresion BT_HACER instrucciones BT_FPARA

   84 defAccion: BT_ACCION cabeceraAccion bloque BT_FACCION

   85 defFuncion: BT_FUNCION cabeceraFuncion bloque BT_DEV expresion BT_FFUNCION

   86 cabeceraAccion: BT_IDENTIFICADOR BT_INICIOPARENTESIS defParForm BT_FINPARENTESIS BT_COMPOSICIONSECUENCIAL

   87 cabeceraFuncion: BT_IDENTIFICADOR BT_INICIOPARENTESIS listaDefsVariables BT_FINPARENTESIS BT_DEV defTipo

   88 defParForm: dParForm BT_COMPOSICIONSECUENCIAL defParForm
   89           | dParForm
   90           | %empty

   91 dParForm: BT_ENT listaId BT_DEFINICIONTIPOVARIABLE defTipo
   92         | BT_SAL listaId BT_DEFINICIONTIPOVARIABLE defTipo
   93         | BT_ENTSAL listaId BT_DEFINICIONTIPOVARIABLE defTipo

   94 llamadaAccion: BT_IDENTIFICADOR BT_INICIOPARENTESIS parametrosReales BT_FINPARENTESIS

   95 llamadaFuncion: BT_IDENTIFICADOR BT_INICIOPARENTESIS parametrosReales BT_FINPARENTESIS

   96 parametrosReales: expresion BT_SEPARADOR parametrosReales
   97                 | expresion
   98                 | %empty


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    BT_ALGORITMO (258) 1
    BT_FALGORITMO (259) 1
    BT_IDENTIFICADOR (260) 1 18 22 28 30 34 35 65 83 86 87 94 95
    BT_COMENTARIO (261) 2 3
    BT_TIPO (262) 15
    BT_FTIPO (263) 15
    BT_CONST (264) 16
    BT_FCONST (265) 16
    BT_VAR (266) 17
    BT_FVAR (267) 17
    BT_TUPLA (268) 20
    BT_FTUPLA (269) 20
    BT_TABLA (270) 21
    BT_DE (271) 21
    BT_DEV (272) 85 87
    BT_REF (273) 24 68
    BT_TIPOBASE (274) 25
    BT_LITERALENTERO (275) 26
    BT_LITERALCARACTER (276) 27
    BT_VERDADERO (277) 57
    BT_FALSO (278) 58
    BT_LITERAL (279) 30
    BT_ENT (280) 39 91
    BT_SAL (281) 40 92
    BT_ENTSAL (282) 93
    BT_LITERALNUMERICO (283) 51
    BT_Y (284) 54
    BT_O (285) 55
    BT_NO (286) 56
    BT_CONTINUAR (287) 71
    BT_SI (288) 77
    BT_FSI (289) 77
    BT_MIENTRAS (290) 82
    BT_FMIENTRAS (291) 82
    BT_HACER (292) 82 83
    BT_PARA (293) 83
    BT_FPARA (294) 83
    BT_HASTA (295) 83
    BT_ACCION (296) 84
    BT_FACCION (297) 84
    BT_FUNCION (298) 85
    BT_FFUNCION (299) 85
    BT_CERO (300)
    BT_DOSCIENTOSCINCUENTAYCINCO (301)
    BT_PUNTO (302) 66
    BT_SUMA (303) 43 52
    BT_RESTA (304) 44 50
    BT_DIV (305) 47
    BT_MOD (306) 48
    BT_DIVREAL (307) 46
    BT_MULTIPLICACION (308) 45
    BT_INICIOPARENTESIS (309) 49 86 87 94 95
    BT_FINPARENTESIS (310) 49 86 87 94 95
    BT_ASIGNACION (311) 28 30 76 83
    BT_COMPOSICIONSECUENCIAL (312) 1 18 28 30 32 69 86 88
    BT_DEFINICIONTIPOVARIABLE (313) 32 91 92 93
    BT_ENTONCES (314) 77 78
    BT_INICIOARRAY (315) 21 67
    BT_FINARRAY (316) 21 67
    BT_CREACIONTIPO (317) 18
    BT_SEPARADOR (318) 34 96
    BT_SUBRANGO (319) 21 23
    BT_MAYOR (320) 59
    BT_MENOR (321) 60
    BT_IGUAL (322) 61
    BT_DISTINTO (323) 62
    BT_MAYORIGUAL (324) 63
    BT_MENORIGUAL (325) 64
    BT_OPREL (326) 53
    BT_SINOSI (327) 78


Nonterminals, with rules where they appear

    $accept (73)
        on left: 0
    descAlgoritmo (74)
        on left: 1
        on right: 0
    cabeceraAlgoritmo (75)
        on left: 2
        on right: 1
    bloqueAlgoritmo (76)
        on left: 3
        on right: 1
    defGlobales (77)
        on left: 4 5 6
        on right: 2 4 5
    defAccionesFunciones (78)
        on left: 7 8 9
        on right: 2 7 8
    bloque (79)
        on left: 10
        on right: 3 84 85
    declaraciones (80)
        on left: 11 12 13 14
        on right: 10 11 12 13
    definicionTipo (81)
        on left: 15
        on right: 4 11
    definicionConst (82)
        on left: 16
        on right: 5 12
    definicionVar (83)
        on left: 17
        on right: 13
    listaDefsTipo (84)
        on left: 18 19
        on right: 15 18
    defTipo (85)
        on left: 20 21 22 23 24 25
        on right: 18 21 24 28 32 87 91 92 93
    expresionT (86)
        on left: 26 27
        on right: 21 23
    listaCampos (87)
        on left: 28 29
        on right: 20 28
    listaDefsConstantes (88)
        on left: 30 31
        on right: 16 30
    listaDefsVariables (89)
        on left: 32 33
        on right: 17 32 39 40 87
    listaId (90)
        on left: 34 35
        on right: 32 34 91 92 93
    defVariablesInteraccion (91)
        on left: 36 37 38
        on right: 2
    defEntrada (92)
        on left: 39
        on right: 36 37
    defSalida (93)
        on left: 40
        on right: 37 38
    expresion (94)
        on left: 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64
        on right: 43 44 45 46 47 48 49 50 52 53 54 55 56 59 60 61 62 63 64 67 76 77 78 82 83 85 96 97
    operando (95)
        on left: 65 66 67 68
        on right: 42 66 67 68 76
    instrucciones (96)
        on left: 69 70
        on right: 10 69 77 78 82 83
    instruccion (97)
        on left: 71 72 73 74 75
        on right: 69 70
    asignacion (98)
        on left: 76
        on right: 72
    alternativa (99)
        on left: 77
        on right: 73
    listaOpciones (100)
        on left: 78 79
        on right: 77 78
    iteracion (101)
        on left: 80 81
        on right: 74
    itCotaVariable (102)
        on left: 82
        on right: 81
    itCotaFija (103)
        on left: 83
        on right: 80
    defAccion (104)
        on left: 84
        on right: 7
    defFuncion (105)
        on left: 85
        on right: 8
    cabeceraAccion (106)
        on left: 86
        on right: 84
    cabeceraFuncion (107)
        on left: 87
        on right: 85
    defParForm (108)
        on left: 88 89 90
        on right: 86 88
    dParForm (109)
        on left: 91 92 93
        on right: 88 89
    llamadaAccion (110)
        on left: 94
        on right: 75
    llamadaFuncion (111)
        on left: 95
        on right: 41
    parametrosReales (112)
        on left: 96 97 98
        on right: 94 95 96


State 0

    0 $accept: . descAlgoritmo $end

    BT_ALGORITMO  shift, and go to state 1

    descAlgoritmo  go to state 2


State 1

    1 descAlgoritmo: BT_ALGORITMO . BT_IDENTIFICADOR BT_COMPOSICIONSECUENCIAL cabeceraAlgoritmo bloqueAlgoritmo BT_FALGORITMO

    BT_IDENTIFICADOR  shift, and go to state 3


State 2

    0 $accept: descAlgoritmo . $end

    $end  shift, and go to state 4


State 3

    1 descAlgoritmo: BT_ALGORITMO BT_IDENTIFICADOR . BT_COMPOSICIONSECUENCIAL cabeceraAlgoritmo bloqueAlgoritmo BT_FALGORITMO

    BT_COMPOSICIONSECUENCIAL  shift, and go to state 5


State 4

    0 $accept: descAlgoritmo $end .

    $default  accept


State 5

    1 descAlgoritmo: BT_ALGORITMO BT_IDENTIFICADOR BT_COMPOSICIONSECUENCIAL . cabeceraAlgoritmo bloqueAlgoritmo BT_FALGORITMO

    BT_TIPO   shift, and go to state 6
    BT_CONST  shift, and go to state 7

    $default  reduce using rule 6 (defGlobales)

    cabeceraAlgoritmo  go to state 8
    defGlobales        go to state 9
    definicionTipo     go to state 10
    definicionConst    go to state 11


State 6

   15 definicionTipo: BT_TIPO . listaDefsTipo BT_FTIPO

    BT_IDENTIFICADOR  shift, and go to state 12

    $default  reduce using rule 19 (listaDefsTipo)

    listaDefsTipo  go to state 13


State 7

   16 definicionConst: BT_CONST . listaDefsConstantes BT_FCONST

    BT_IDENTIFICADOR  shift, and go to state 14

    $default  reduce using rule 31 (listaDefsConstantes)

    listaDefsConstantes  go to state 15


State 8

    1 descAlgoritmo: BT_ALGORITMO BT_IDENTIFICADOR BT_COMPOSICIONSECUENCIAL cabeceraAlgoritmo . bloqueAlgoritmo BT_FALGORITMO

    BT_TIPO   shift, and go to state 6
    BT_CONST  shift, and go to state 7
    BT_VAR    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)

    bloqueAlgoritmo  go to state 17
    bloque           go to state 18
    declaraciones    go to state 19
    definicionTipo   go to state 20
    definicionConst  go to state 21
    definicionVar    go to state 22


State 9

    2 cabeceraAlgoritmo: defGlobales . defAccionesFunciones defVariablesInteraccion BT_COMENTARIO

    BT_ACCION   shift, and go to state 23
    BT_FUNCION  shift, and go to state 24

    $default  reduce using rule 9 (defAccionesFunciones)

    defAccionesFunciones  go to state 25
    defAccion             go to state 26
    defFuncion            go to state 27


State 10

    4 defGlobales: definicionTipo . defGlobales

    BT_TIPO   shift, and go to state 6
    BT_CONST  shift, and go to state 7

    $default  reduce using rule 6 (defGlobales)

    defGlobales      go to state 28
    definicionTipo   go to state 10
    definicionConst  go to state 11


State 11

    5 defGlobales: definicionConst . defGlobales

    BT_TIPO   shift, and go to state 6
    BT_CONST  shift, and go to state 7

    $default  reduce using rule 6 (defGlobales)

    defGlobales      go to state 29
    definicionTipo   go to state 10
    definicionConst  go to state 11


State 12

   18 listaDefsTipo: BT_IDENTIFICADOR . BT_CREACIONTIPO defTipo BT_COMPOSICIONSECUENCIAL listaDefsTipo

    BT_CREACIONTIPO  shift, and go to state 30


State 13

   15 definicionTipo: BT_TIPO listaDefsTipo . BT_FTIPO

    BT_FTIPO  shift, and go to state 31


State 14

   30 listaDefsConstantes: BT_IDENTIFICADOR . BT_ASIGNACION BT_LITERAL BT_COMPOSICIONSECUENCIAL listaDefsConstantes

    BT_ASIGNACION  shift, and go to state 32


State 15

   16 definicionConst: BT_CONST listaDefsConstantes . BT_FCONST

    BT_FCONST  shift, and go to state 33


State 16

   17 definicionVar: BT_VAR . listaDefsVariables BT_FVAR

    BT_IDENTIFICADOR  shift, and go to state 34

    $default  reduce using rule 33 (listaDefsVariables)

    listaDefsVariables  go to state 35
    listaId             go to state 36


State 17

    1 descAlgoritmo: BT_ALGORITMO BT_IDENTIFICADOR BT_COMPOSICIONSECUENCIAL cabeceraAlgoritmo bloqueAlgoritmo . BT_FALGORITMO

    BT_FALGORITMO  shift, and go to state 37


State 18

    3 bloqueAlgoritmo: bloque . BT_COMENTARIO

    BT_COMENTARIO  shift, and go to state 38


State 19

   10 bloque: declaraciones . instrucciones

    BT_IDENTIFICADOR  shift, and go to state 39
    BT_CONTINUAR      shift, and go to state 40
    BT_SI             shift, and go to state 41
    BT_MIENTRAS       shift, and go to state 42
    BT_PARA           shift, and go to state 43

    operando        go to state 44
    instrucciones   go to state 45
    instruccion     go to state 46
    asignacion      go to state 47
    alternativa     go to state 48
    iteracion       go to state 49
    itCotaVariable  go to state 50
    itCotaFija      go to state 51
    llamadaAccion   go to state 52


State 20

   11 declaraciones: definicionTipo . declaraciones

    BT_TIPO   shift, and go to state 6
    BT_CONST  shift, and go to state 7
    BT_VAR    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)

    declaraciones    go to state 53
    definicionTipo   go to state 20
    definicionConst  go to state 21
    definicionVar    go to state 22


State 21

   12 declaraciones: definicionConst . declaraciones

    BT_TIPO   shift, and go to state 6
    BT_CONST  shift, and go to state 7
    BT_VAR    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)

    declaraciones    go to state 54
    definicionTipo   go to state 20
    definicionConst  go to state 21
    definicionVar    go to state 22


State 22

   13 declaraciones: definicionVar . declaraciones

    BT_TIPO   shift, and go to state 6
    BT_CONST  shift, and go to state 7
    BT_VAR    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)

    declaraciones    go to state 55
    definicionTipo   go to state 20
    definicionConst  go to state 21
    definicionVar    go to state 22


State 23

   84 defAccion: BT_ACCION . cabeceraAccion bloque BT_FACCION

    BT_IDENTIFICADOR  shift, and go to state 56

    cabeceraAccion  go to state 57


State 24

   85 defFuncion: BT_FUNCION . cabeceraFuncion bloque BT_DEV expresion BT_FFUNCION

    BT_IDENTIFICADOR  shift, and go to state 58

    cabeceraFuncion  go to state 59


State 25

    2 cabeceraAlgoritmo: defGlobales defAccionesFunciones . defVariablesInteraccion BT_COMENTARIO

    BT_ENT  shift, and go to state 60
    BT_SAL  shift, and go to state 61

    defVariablesInteraccion  go to state 62
    defEntrada               go to state 63
    defSalida                go to state 64


State 26

    7 defAccionesFunciones: defAccion . defAccionesFunciones

    BT_ACCION   shift, and go to state 23
    BT_FUNCION  shift, and go to state 24

    $default  reduce using rule 9 (defAccionesFunciones)

    defAccionesFunciones  go to state 65
    defAccion             go to state 26
    defFuncion            go to state 27


State 27

    8 defAccionesFunciones: defFuncion . defAccionesFunciones

    BT_ACCION   shift, and go to state 23
    BT_FUNCION  shift, and go to state 24

    $default  reduce using rule 9 (defAccionesFunciones)

    defAccionesFunciones  go to state 66
    defAccion             go to state 26
    defFuncion            go to state 27


State 28

    4 defGlobales: definicionTipo defGlobales .

    $default  reduce using rule 4 (defGlobales)


State 29

    5 defGlobales: definicionConst defGlobales .

    $default  reduce using rule 5 (defGlobales)


State 30

   18 listaDefsTipo: BT_IDENTIFICADOR BT_CREACIONTIPO . defTipo BT_COMPOSICIONSECUENCIAL listaDefsTipo

    BT_IDENTIFICADOR    shift, and go to state 67
    BT_TUPLA            shift, and go to state 68
    BT_TABLA            shift, and go to state 69
    BT_REF              shift, and go to state 70
    BT_TIPOBASE         shift, and go to state 71
    BT_LITERALENTERO    shift, and go to state 72
    BT_LITERALCARACTER  shift, and go to state 73

    defTipo     go to state 74
    expresionT  go to state 75


State 31

   15 definicionTipo: BT_TIPO listaDefsTipo BT_FTIPO .

    $default  reduce using rule 15 (definicionTipo)


State 32
